# anodize

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  SECURITY_FINDINGS.md  TODO.md  core  deny.toml  flake.nix
.githooks/: pre-commit
.github/workflows/: ci.yml
crates/anodize-audit/: Cargo.toml
crates/anodize-audit/src/: lib.rs  validate.rs
crates/anodize-audit/tests/: audit_log.rs
crates/anodize-ca/: Cargo.toml
crates/anodize-ca/src/: lib.rs
crates/anodize-ca/tests/: ca_integration.rs
crates/anodize-cli/: Cargo.toml
crates/anodize-cli/src/: main.rs
crates/anodize-config/: Cargo.toml
crates/anodize-config/src/: events.rs  lib.rs  state.rs
crates/anodize-hsm/: Cargo.toml
crates/anodize-hsm/examples/: yubihsm_enum.rs
crates/anodize-hsm/src/: lib.rs  softhsm.rs  yubihsm_backend.rs
crates/anodize-hsm/tests/: softhsm_basic.rs
crates/anodize-shuttle/: Cargo.toml
crates/anodize-shuttle/src/: init.rs  lint.rs  main.rs
crates/anodize-sss/: Cargo.toml
crates/anodize-sss/src/: gf256.rs  lib.rs  wordlist.rs
crates/anodize-tui/: Cargo.toml
crates/anodize-tui/src/: action.rs  app.rs  ceremony_ops.rs  event.rs  helpers.rs  main.rs  main_old.rs  sentinel.rs  syshealth.rs  theme.rs  tui.rs  validate_disc.rs
crates/anodize-tui/src/components/: confirm_dialog.rs  custodian_setup.rs  mod.rs  mode_bar.rs  phase_bar.rs  share_input.rs  share_reveal.rs  status_bar.rs
crates/anodize-tui/src/media/: iso9660.rs  mmc.rs  mod.rs  sgdev.rs  usb_disc.rs
crates/anodize-tui/src/modes/: mod.rs  setup.rs
crates/anodize-tui/src/modes/ceremony/: mod.rs
crates/anodize-tui/src/modes/utilities/: backup.rs  disc_inspector.rs  disc_sync.rs  mod.rs
docs/: README.md  architecture.md  builds-and-iso.md  ceremony-init.md  ceremony-multisession-test.md  ceremony-pipeline.md  ceremony-sign.md  ceremony-validate.md  design.md  e2e-test-plan.md  hsm-fleet.md  optical-disc.md  overview.md  security.md  sss-pin-management.md  threat-model.md
nix/: cdemu.nix  dev-iso.nix  iso.nix
scripts/: cdemu-swap-disc.sh  dev-ssh-key  dev-ssh-key.pub  e2e-multisession.expect  e2e-test.expect  init-softhsm-shuttle.sh  init-softhsm-usb.sh
tests/softhsm-fixtures/: softhsm2.conf.template
