[workspace]
members = [
    "crates/anodize-hsm",
    "crates/anodize-ca",
    "crates/anodize-audit",
    "crates/anodize-config",
    "crates/anodize-sss",
    "crates/anodize-tui",
    "crates/anodize-shuttle",
]
resolver = "2"

[workspace.dependencies]
# HSM / crypto
cryptoki       = "0.7"
yubihsm        = { git = "https://github.com/jof/yubihsm.rs.git", branch = "add-change-authentication-key", features = ["usb"] }
# X.509
x509-cert      = { version = "0.2", features = ["builder"] }
der            = "0.7"
spki           = "0.7"
clap           = { version = "4", features = ["derive"] }
# TUI (ceremony binary)
ratatui        = "0.29"
crossterm      = "0.28"
# Config
serde          = { version = "1", features = ["derive"] }
toml           = "0.8"
# Secrets / crypto primitives
secrecy        = "0.8"
sha2           = "0.10"
hex            = "0.4"
getrandom      = "0.2"
serde_json     = "1"
base64         = "0.22"
zeroize        = { version = "1", features = ["derive"] }
# ECDSA verification (tests + anodize-ca)
p256           = { version = "0.13", features = ["ecdsa", "pkcs8", "digest"] }
p384           = { version = "0.13", features = ["ecdsa", "pkcs8", "digest"] }
# RSA verification
rsa            = { version = "0.9", features = ["sha2"] }
# Ed25519 verification
ed25519-dalek  = { version = "2", features = ["pkcs8"] }
# Time (date arithmetic for validity periods)
time           = { version = "0.3", features = ["formatting", "macros", "parsing"] }
# Error handling
thiserror      = "2"
anyhow         = "1"
# System / ioctl
nix            = { version = "0.29", features = ["ioctl", "fs", "reboot", "signal"] }
# Logging
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
