[package]
name = "anodize-audit"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sha2.workspace = true
hex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
