[package]
name = "anodize-ca"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anodize-hsm = { path = "../anodize-hsm" }
x509-cert.workspace = true
der.workspace = true
spki.workspace = true
time.workspace = true
thiserror.workspace = true
tracing.workspace = true
