[package]
name = "anodize-ca"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anodize-hsm = { path = "../anodize-hsm" }
x509-cert.workspace = true
der.workspace = true
spki.workspace = true
p384.workspace = true
time.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
anodize-hsm = { path = "../anodize-hsm" }
p384.workspace = true
secrecy.workspace = true
anyhow.workspace = true
