[package]
name = "anodize-ca"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anodize-hsm = { path = "../anodize-hsm" }
getrandom.workspace = true
x509-cert.workspace = true
der.workspace = true
spki.workspace = true
sha2.workspace = true
p256.workspace = true
p384.workspace = true
rsa.workspace = true
ed25519-dalek.workspace = true
time.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
anodize-hsm = { path = "../anodize-hsm" }
p256.workspace = true
p384.workspace = true
rsa.workspace = true
ed25519-dalek.workspace = true
getrandom.workspace = true
secrecy.workspace = true
sha2.workspace = true
anyhow.workspace = true
