[package]
name = "anodize-hsm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anodize-config = { path = "../anodize-config" }
cryptoki.workspace = true
yubihsm.workspace = true
secrecy.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
anyhow.workspace = true
p384.workspace = true
secrecy.workspace = true
