[package]
name = "anodize-sss"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shamir's Secret Sharing for Anodize ceremony PIN splitting"

[dependencies]
sha2        = { workspace = true }
hex         = { workspace = true }
getrandom   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
zeroize     = { version = "1", features = ["derive"] }

[dependencies.anodize-config]
path = "../anodize-config"
optional = true

[features]
recover-bin = ["anodize-config"]

[[bin]]
name = "anodize-recover"
required-features = ["recover-bin"]

[dev-dependencies]
