[package]
name = "anodize-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "anodize-ceremony"
path = "src/main.rs"

[dependencies]
anodize-hsm    = { path = "../anodize-hsm" }
anodize-ca     = { path = "../anodize-ca" }
anodize-audit  = { path = "../anodize-audit" }
anodize-config = { path = "../anodize-config" }
ratatui.workspace = true
crossterm.workspace = true
clap.workspace = true
anyhow.workspace = true
der.workspace = true
hex.workspace = true
secrecy.workspace = true
serde_json.workspace = true
sha2.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
x509-cert.workspace = true
nix.workspace = true
time.workspace = true
