[package]
name = "anodize-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# Use a SoftHSM2 token directory on the profile USB as the HSM backend.
# Writes SOFTHSM2_CONF pointing at <usb>/softhsm2/tokens/ before HSM init.
# NEVER enable in a real ceremony — dev testing only.
dev-softhsm-usb = []

[[bin]]
name = "anodize-ceremony"
path = "src/main.rs"

[[bin]]
name = "anodize-sentinel"
path = "src/sentinel.rs"

[dependencies]
anodize-hsm    = { path = "../anodize-hsm" }
anodize-ca     = { path = "../anodize-ca" }
anodize-audit  = { path = "../anodize-audit" }
anodize-config = { path = "../anodize-config" }
anodize-sss    = { path = "../anodize-sss" }
ratatui.workspace = true
crossterm.workspace = true
clap.workspace = true
anyhow.workspace = true
der.workspace = true
hex.workspace = true
secrecy.workspace = true
serde_json.workspace = true
sha2.workspace = true
getrandom.workspace = true
base64.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
x509-cert.workspace = true
nix.workspace = true
time.workspace = true
